# bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.py  handlers.py  image.py  pyproject.toml  requirements.pip  sheets.py
.github/workflows/: lint.yaml  lintyaml
src/: app.py  image.py  sheets.py  views.py
src/utils/: bolt_utils.py  client.py  firestore.py  mention_helper.py
utils/: client.py  firestore.py  link_helper.py  mention_helper.py
